# rust-allusion

./: .gitignore  AGENTS.md  REFACTOR.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
.qwen/: settings.json
docs/: design.md  modules.md  ui-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 001_create_images_table.sql  002_create_tags_table.sql  003_create_image_tags_table.sql  004_create_locations_table.sql  005_create_thumbnails_table.sql  006_create_settings_table.sql  007_migrate_image_tags_to_hash.sql  008_change_thumbnail_primary_key_to_hash.sql  008_migrate_thumbnails_structure.sql  009_make_thumbnail_paths_relative.sql  DEPLOYMENT.md  README.md
src-tauri/migrations/20250101000001_init/: down.sql  up.sql
src-tauri/src/: main.rs  vips.rs
src-tauri/src/core/: file_monitor.rs  importer.rs  mod.rs  search.rs  search_service.rs  startup_scanner.rs  thumbnail.rs  wallpaper.rs
src-tauri/src/db/: image_repository.rs  location_repository.rs  migration.rs  migration_manager.rs  mod.rs  tag_repository.rs  thumbnail_repository.rs
src-tauri/src/handlers/: image.rs  import.rs  location.rs  misc.rs  mod.rs  search.rs  settings.rs  tag.rs  thumbnail.rs  wallpaper.rs
src-tauri/src/models/: image.rs  location.rs  mod.rs  search.rs  tag.rs  thumbnail.rs
src/api/: locations.ts  search.ts  settings.ts  tags.ts  thumbnail.ts  wallpaper.ts
src/components/: ContextMenu.tsx  CropOverlay.tsx  DeleteConfirmDialog.tsx  Gallery.tsx  Header.tsx  (+18 more)
(+5 files in other folders)
