[package]
name = "rust-allusion"
version = "0.1.0"
description = "高性能图片管理应用"
authors = ["Qiyuan"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-persisted-scope = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# File system
walkdir = "2.5"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

# File hashing
blake3 = "1.5"

# Image processing
libvips = { version = "1.7", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
kamadak-exif = "0.6"

# Search engine
tantivy = "0.22"

# Async utilities
futures = "0.3"

# Path utilities
path-clean = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
